# nupylab

./: .readthedocs.yaml  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  modules.rst  nupylab.gui.rst  nupylab.instruments.rst  nupylab.rst  quick_start.rst
docs/source/api/: gui.rst
docs/source/maintaining/: documentation.rst  git.rst  index.rst
docs/source/tutorial/: experiment.rst  index.rst  installation.rst  new_stations.rst
gui/: keithley2420_gui.py  multipurpose_impedance_station.py  parameter_table.py
instruments/: biologic.py  eurotherm2000.py  eurotherm3200.py  keithley705.py
nupylab/: __init__.py
nupylab/drivers/: __init__.py  aeraFC_D98x.py  aeraFC_PA78x.py  aera_mfc.py  autolab.py  autolab_support.py  biologic.py  biologic_lint.txt  eurotherm2200.py  eurotherm2400.py  eurotherm3216.py  keithley705.py  labjack_u12.py  omron_e5.py
nupylab/gui/: S8_biologic_eurotherm2200.py  multipurpose_impedance_station.py  mypy.ini  parameter_table.py  s4_gui.py  s8_biologic_eurotherm2200.py  s8_gui.py  safc_gui.py  safc_lint.txt  safc_station.py
nupylab/instruments/: __init__.py  autolab.py  biologic.py  eurotherm2000.py  eurotherm2200.py  eurotherm2400.py  eurotherm3200.py  keithley705.py  nupylab_instrument.py
nupylab/instruments/ac_potentiostat/: agilent4284A.py  biologic.py
nupylab/utilities/: __init__.py  default_queue.py  nupylab_instrument.py  nupylab_procedure.py  nupylab_window.py  parameter_table.py  thermocouples.py
(+30 files in other folders)
