[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nupylab"
authors = [
    {name = "Haile Group", email = "haile.research.lab@gmail.com"},
    {name = "Connor Carr", email = "ConnorCarr2021@u.northwestern.edu"}
]
description = "Python-based lab instrument control for the Haile Group"
urls = ["https://github.com/hailegroup/nupylab"]
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["LabVIEW, measure, instrument, experiment"]
dependencies = [
    "gpib-ctypes>=0.3.0",
    "minimalmodbus>=2.1.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pymeasure>=0.14.0",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.1",
]
dynamic = ["version"]

[project.optional-dependencies]
qt5 = ["PySide2"]
qt6 = ["PySide6"]
test = ["PySide6", "pytest", "pytest-qt", "pytest-cov", "mypy", "tox"]

[tool.setuptools.dynamic]
version = {attr = "nupylab.__version__"}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"